@startuml
title SO DO LOP 3 TANG - TONG QUAN DASHBOARD

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 35
skinparam ranksep 45
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BorderColor #7F8C8D
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHTongQuanDashboard #BFE8BA {
    - cboRole: Label
    - pnlKpi: Panel
    - pnlTask: Panel
    - grvHangCho: GridView
    - chartXuHuong: Chart
    - btnLamMoi: Button
    --
    + HienThi()
    + taiSnapshot()
    + lamMoi()
    + moDeepLink(duongDan: String)
  }
}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class TongQuanDashboard #F4E3A2 {
    + LaySale(maNV: String): SaleDashboardSnapshot
    + LayManager(maNV: String): ManagerDashboardSnapshot
    + LayAccountant(maNV: String): AccountantDashboardSnapshot
    + LayAdmin(): AdminDashboardSnapshot
  }

  class NhanVien #F4E3A2 {
    - MaNV: String
    - MaCN: String
    - TenChiNhanh: String
    - VaiTro: String
    --
    + DocPhamVi(maNV: String): NhanVien
  }

  class DashboardTongHop #F4E3A2 {
    + LaySale(maCN: String, tenChiNhanh: String, asOf: DateTime): SaleDashboardSnapshot
    + LayManager(maCN: String, tenChiNhanh: String, asOf: DateTime): ManagerDashboardSnapshot
    + LayAccountant(maCN: String, tenChiNhanh: String, asOf: DateTime): AccountantDashboardSnapshot
    + LayAdmin(asOf: DateTime): AdminDashboardSnapshot
  }

  class SaleDashboardSnapshot #F4E3A2 {
    - Meta: DashboardMeta
    - Kpis: List
    - Tasks: List
    - RecentAppointments: List
  }

  class ManagerDashboardSnapshot #F4E3A2 {
    - Meta: DashboardMeta
    - Kpis: List
    - Tasks: List
    - HandoverQueue: List
  }

  class AccountantDashboardSnapshot #F4E3A2 {
    - Meta: DashboardMeta
    - Kpis: List
    - Tasks: List
    - RecentTransactions: List
    - ReceiptTrend: List
  }

  class AdminDashboardSnapshot #F4E3A2 {
    - Meta: DashboardMeta
    - Kpis: List
    - Tasks: List
    - ConfigRows: List
    - BedStatusBreakdown: List
    - ActivePolicyCode: String
    - ActivePolicyName: String
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EAF2F8 {
  class DashboardDB #AED6F1 {
    + LaySale(maCN: String, tenChiNhanh: String, asOf: DateTime): SaleDashboardSnapshot
    + LayManager(maCN: String, tenChiNhanh: String, asOf: DateTime): ManagerDashboardSnapshot
    + LayAccountant(maCN: String, tenChiNhanh: String, asOf: DateTime): AccountantDashboardSnapshot
    + LayAdmin(asOf: DateTime): AdminDashboardSnapshot
  }
}

MHTongQuanDashboard o-- TongQuanDashboard
TongQuanDashboard o-- NhanVien
TongQuanDashboard o-- DashboardTongHop
DashboardTongHop o-- DashboardDB
DashboardTongHop .. SaleDashboardSnapshot
DashboardTongHop .. ManagerDashboardSnapshot
DashboardTongHop .. AccountantDashboardSnapshot
DashboardTongHop .. AdminDashboardSnapshot

@enduml
